# grid-representations

./: .gitignore  README.md  adapter_analysis.ipynb  analysis.ipynb  analysis.py  can.py  can2d.py  can_path_integration.py  data.py  loss.py  losses.py  main.py  pyproject.toml  rgm.py  schedulers.py  scores.py  sweep.py  torus_vis.py  train.py
CAN/: can.py  can2d.py  can_artificial_cells.py  can_denoising_cd_rgm.py  can_ebm_rgm.py  can_energy_volume_rgm.py  can_hebbian_manifold_rgm.py  can_real.py  can_real_manifold.py  can_real_manifold_rgm.py  can_real_sigmoid.py  can_spectral_rgm.py
CAN/config/: can.yaml  can2d.yaml  can_artificial_cells.yaml  can_denoising_cd_rgm.yaml  can_ebm_rgm.yaml  can_energy_volume_rgm.yaml  can_hebbian_manifold_rgm.yaml  can_real.yaml  can_real_manifold.yaml  can_real_manifold_rgm.yaml  can_sigmoid.yaml  can_spectral_rgm.yaml
config/: can_path_integration.yaml  config.yaml
config/experiment/: seq_10.yaml  seq_100.yaml  seq_1000.yaml  seq_2.yaml  seq_200.yaml  seq_5.yaml  seq_50.yaml  seq_500.yaml
