[project]
name = "grid-representations"
version = "0.1.0"
description = "Grid pattern emergence"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.0",
    "mlflow>=3.9.0",
    "numpy>=2.2.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "scipy>=1.15.0",
    "sqlalchemy>=2.0.46",
    "torch>=2.6.0",
    "tqdm>=4.67.2",
]

[project.optional-dependencies]
gpu = [
    "nvidia-cublas-cu12",
    "nvidia-cuda-cupti-cu12",
    "nvidia-cuda-nvrtc-cu12",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cufft-cu12",
    "nvidia-curand-cu12",
    "nvidia-cusolver-cu12",
    "nvidia-cusparse-cu12",
    "nvidia-nccl-cu12",
    "nvidia-nvjitlink-cu12",
    "nvidia-nvtx-cu12",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "nbformat>=5.10.4",
]
